# library-management-system

./: CMakeLists.txt  bookentity.h  bookmapper.h  bookrepository.cpp  bookrepository.h  booksindexscreen.cpp  booksindexscreen.h  booksindexscreen.ui  controller.cpp  controller.h  database.h  entity.h  loginscreen.cpp  loginscreen.h  loginscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuscreen.cpp  menuscreen.h  menuscreen.ui  readercardentity.h  readercardmapper.h  readercardrepository.cpp  readercardrepository.h  readercardsscreen.cpp  readercardsscreen.h  readercardsscreen.ui  schema.h  screenbase.h  screenid.h  state.h  userentity.h  usermapper.h  userrepository.cpp  userrepository.h
